--- a/music.html
+++ b/music.html
@@ -18,7 +18,7 @@
         <span class="navbar-toggler-icon"></span></button>
 
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav navbar-expand-sm mr-auto">
+            <ul class="navbar-nav mr-auto">
                 <li class="active nav-item col-6 col-sm-3 mr-2"><a class="nav-link" href="index.html">Home</a></li>
                 <li class="nav-item col-6 col-sm-3 mr-2"><a class="nav-link" href="gallery.html">Gallery</a></li>
                 <li class="nav-item col-6 col-sm-3 mr-2"><a class="nav-link" href="music.html">Music</a></li>
@@ -28,9 +28,6 @@
          </div>
         </div>
 
-
-<!--Sign up in the nav bar-->
-
     </header>
 
     <!-- Bio  ------------------------------------------------------->
@@ -38,21 +35,12 @@
         <div class="container">
             <div class="row">
                 <div class="col bio">
-                    <h2 class="title">Welcome...</h2>
-                    <p>Born and raised in East London Habiba’s earliest memory of music was listening to Motown records in her uncles flat in Lewisham.</p>
-                    <p>Her music shaped from her musical education of The Supremes, The Temptations and Michael Jackson to Stevie Wonder and Marvin Gaye, 
-                        with her writing style reflective of the raw and emotive style of writing in that time. </p>
-                    <p>Her influences include Etta James, Michael Jackson, Beyoncé, Lauryn Hill and HER which stimulated her creativity when writing her debut single. </p>
-                    <p>Habiba’s music is best described as heartfelt and honest using soulful tones to share what can only be described as the beautiful pains of love and life.</p>
+                    <h2 class="title">Page 3 Music.</h2>
+                    <p>links to her music.</p>
                 </div>
             </div>   
         </div>     
-
-        <div class="iframe-container">
-            <iframe src="https://www.youtube.com/embed/P-A5gbBqvrA?autoplay=1&loop=1&color=white&mute=1" width="560" height="315" frameborder="0"></iframe>
-        </div>
-
-
+        
     </section>
 
 
