--- a/gallery.html
+++ b/gallery.html
@@ -10,25 +10,56 @@
 </head>
 <body>
     <header>
-         <div class="row">
-                <div class="col-12 navbar navbar-light navbar-expand-sm">
-                    <a href="index.html" class="col logo"> </a>
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerHabiba" aria-controls="navbarTogglerHabiba" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <a class="navbar-left mr-auto" href="index.html"> <img id="logo" src="/assets/images/logo.jpg" alt="Habiba logo"> </a>
 
-        <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span></button>
-
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav mr-auto">
-                <li class="active nav-item col-6 col-sm-3 mr-2"><a class="nav-link" href="index.html">Home</a></li>
-                <li class="active nav-item col-6 col-sm-3 mr-2"><a class="nav-link" href="gallery.html">Gallery</a></li>
-                <li class="nav-item col-6 col-sm-3 mr-2"><a class="nav-link" href="music.html">Music</a></li>
-                <li class="nav-item col-6 col-sm-3 mr-2"><a class="nav-link" href="bookme.html"> Upcoming Shows</a></li>
-                    </ul>
+            <div class="collapse navbar-collapse" id="navbarTogglerHabiba">
+                <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                <li class="nav-item active">
+                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="gallery.html">Gallery</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="me-and-my-music.html">Me & My Music</a>
+                </li>
+                </ul>
                 </div>
-         </div>
-        </div>
 
+                <!-- help making my exsisting form modal https://www.w3schools.com/howto/howto_css_signup_form.asp-->
+                
+                <button onclick="document.getElementById('id01').style.display='block'">Sign Up</button>
+        </nav>      
     </header>
+
+    <section class="signup">
+        <div id="id01" class="modal">
+                <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">X</span>
+                <form class="modal-content" action="/action_page.php">
+                    <div class="container">
+                    <h2>Sign Up</h2>
+                    <label for="fname">First Name:</label>
+                    <br>
+                    <input type="text" name="fname" id="fname" required>
+                     <br>
+                    <label for="lname">Last Name:</label>
+                    <br>
+                    <input type="text" name="lname" id="lname">
+                     <br>
+                    <label for="email">Email Address:</label>
+                    <br>
+                    <input type="email" name="email" id="email" required>
+                    <div>
+                    <button type="submit" class="signup">Sign Up</button>
+                    </div>
+                  </div>
+                </form>
+            </div>
+    </section>
 
     <!-- Gallery photos  ------------------------------------------------------->
     <section id="gal-photos">
