--- a/me-and-my-music.html
+++ b/me-and-my-music.html
@@ -9,7 +9,7 @@
     <title>Habiba</title>
 </head>
 <body>
-    <header>
+     <header>
         <nav class="navbar navbar-expand-lg navbar-light">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerHabiba" aria-controls="navbarTogglerHabiba" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -61,38 +61,17 @@
             </div>
     </section>
 
-    <section>
-        <div class="jumbotron jumbotron-fluid">
-            <div class="container">
-             <h1 class="display-4">Listen Here Now</h1>
-             <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
-            </div>
-         </div>
-
-    </section>
-
     <!-- Bio  ------------------------------------------------------->
     <section>
         <div class="container">
             <div class="row">
                 <div class="col bio">
-                    <h2 class="title">Welcome...</h2>
-                    <p>Born and raised in East London Habiba’s earliest memory of music was listening to Motown records in her uncles flat in Lewisham.</p>
-                    <p>Her music shaped from her musical education of The Supremes, The Temptations and Michael Jackson to Stevie Wonder and Marvin Gaye, 
-                        with her writing style reflective of the raw and emotive style of writing in that time. </p>
-                    <p>Her influences include Etta James, Michael Jackson, Beyoncé, Lauryn Hill and HER which stimulated her creativity when writing her debut single. </p>
-                    <p>Habiba’s music is best described as heartfelt and honest using soulful tones to share what can only be described as the beautiful pains of love and life.</p>
+                    <h2 class="title">Page 3 Music.</h2>
+                    <p>links to her music.</p>
                 </div>
             </div>   
         </div>     
-
-        <div class="container-fluid">
-            <div class="iframe-container">
-                <iframe src="https://www.youtube.com/embed/P-A5gbBqvrA?color=white&mute=1" width="560" height="315" frameborder="0"></iframe>
-            </div>
-        </div>    
-
-
+        
     </section>
 
 
