--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"/>
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Habiba</title>
+    <title>BGB Music</title>
 </head>
 <body>
     <header>
@@ -64,28 +64,15 @@
     <section>
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
-             <h1 class="display-4">Listen Here Now</h1>
-             <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+             <p class="text-center lead" id="outnow"> New Song Alert! <br> Gin & Ginger Ale, Out Now</p>
+             <p class="text-center" id="listen"><a href="https://linktr.ee/habiba_bgb"> Listen Here</a></p>
             </div>
          </div>
 
     </section>
 
-    <!-- Bio  ------------------------------------------------------->
     <section>
-        <div class="container">
-            <div class="row">
-                <div class="col bio">
-                    <h2 class="title">Welcome...</h2>
-                    <p>Born and raised in East London Habiba’s earliest memory of music was listening to Motown records in her uncles flat in Lewisham.</p>
-                    <p>Her music shaped from her musical education of The Supremes, The Temptations and Michael Jackson to Stevie Wonder and Marvin Gaye, 
-                        with her writing style reflective of the raw and emotive style of writing in that time. </p>
-                    <p>Her influences include Etta James, Michael Jackson, Beyoncé, Lauryn Hill and HER which stimulated her creativity when writing her debut single. </p>
-                    <p>Habiba’s music is best described as heartfelt and honest using soulful tones to share what can only be described as the beautiful pains of love and life.</p>
-                </div>
-            </div>   
-        </div>     
-
+           
         <div class="container-fluid">
             <div class="iframe-container">
                 <iframe src="https://www.youtube.com/embed/P-A5gbBqvrA?color=white&mute=1" width="560" height="315" frameborder="0"></iframe>
@@ -104,7 +91,15 @@
 
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">Connect with me</h5>
+        
                 <ul class="list-inline social-links">
+
+                     <li class="list-inline-item">
+                        <a target="_blank" href="mailto:Contact@habibamusic.co.uk">
+                            <i class= "fa fa-envelope" aria-hidden="true"></i>
+                            <span class="sr-only">Email</span>
+                        </a>
+                    </li>
                     <li class="list-inline-item">
                         <a target="_blank" href="https://www.facebook.com/HabibaBGB/">
                             <i class="fa fa-facebook" aria-hidden="true"></i>
