--- a/me-and-my-music.html
+++ b/me-and-my-music.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"/>
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Habiba</title>
+    <title>BGB Music</title>
 </head>
 <body>
      <header>
@@ -61,16 +61,59 @@
             </div>
     </section>
 
-    <!-- Bio  ------------------------------------------------------->
-    <section>
-        <div class="container">
+     <section>
+        <div class="jumbotron jumbotron-fluid">
+            <div class="container">
+             <p class="text-center lead" id="outnow"> New Song Alert! <br> Gin & Ginger Ale, Out Now</p>
+             <p class="text-center" id="listen"><a href="https://linktr.ee/habiba_bgb"> Listen Here</a></p>
+            </div>
+         </div>
+
+    </section>
+<!-- Bio  ------------------------------------------------------->
+    <div class="container">
             <div class="row">
                 <div class="col bio">
-                    <h2 class="title">Page 3 Music.</h2>
-                    <p>links to her music.</p>
+                    <h2 class="title">The beginning of my journey</h2>
+                    <p>
+                        Born and raised in East London, some of my earliest memories of music was listening to Motown records in my uncles flat in Lewisham or singing to Mary Mary on a Sunday as my mother drove us to South London for Church.
+                    </p>
+                    <p>
+                        The people who raised me heavily influenced and shaped my musical education. I grew up enjoying the music of The Supremes, The Temptations, Anita Baker, Sadé, Luther Vandross, Stevie Wonder and the Fugees to name a few. I would say my own writing is reflective of the raw and emotive style of writing in that time
+                    </p>
+                    <p>
+                        I have so many influences that span cross time and genre. Some of my constants are the likes of Etta James, Beyoncé, Ms. Lauryn Hill, H.E.R and Jhene Aiko. Their raw talent and honesty helped stimulate my creativity when writing my debut single <em>HER</em>.
+                    </p>
+                    <p>
+                        I would describe my music as heartfelt and honest. using soulful tones to share what can only be described as the beautiful pains of love and life that I’ve either experienced first-hand or observed.
+                    </p>
+                    <p>
+                        I love making music and I hope you love hearing it.
+                        <br>
+                        Habiba x
+                    </p>
                 </div>
             </div>   
-        </div>     
+        </div>  
+    
+    <section>
+        <div class="container">
+            <h4>Music Monday's</h4>
+            <div class="row">
+                <div class="col-sm">
+                Music monday Vid 1
+                </div>
+                <div class="col-sm">
+                Music monday Vid 2
+                </div>
+                <div class="col-sm">
+                Music monday Vid 3
+                </div>
+                <div class="col-sm">
+                Music monday Vid 4
+                </div>
+            </div>
+        </div>   
         
     </section>
 
