--- a/gallery.html
+++ b/gallery.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"/>
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Habiba</title>
+    <title>BGB Music</title>
 </head>
 <body>
     <header>
@@ -59,6 +59,16 @@
                   </div>
                 </form>
             </div>
+    </section>
+
+     <section>
+        <div class="jumbotron jumbotron-fluid">
+            <div class="container">
+             <p class="text-center lead" id="outnow"> New Song Alert! <br> Gin & Ginger Ale, Out Now</p>
+             <p class="text-center" id="listen"><a href="https://linktr.ee/habiba_bgb"> Listen Here</a></p>
+            </div>
+         </div>
+
     </section>
 
     <!-- Gallery photos  ------------------------------------------------------->
