--- a/index.html
+++ b/index.html
@@ -3,65 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-          integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-          integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"/>
     <link rel="stylesheet" href="assets/css/style.css">
     <title>BGB Music</title>
 </head>
 <body>
-<header>
-    <nav class="navbar navbar-expand-lg navbar-light">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerHabiba"
-                aria-controls="navbarTogglerHabiba" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <a class="navbar-left mr-auto" href="index.html"> <img id="logo" src="assets/images/logo.jpg"
-                                                               alt="Habiba logo"> </a>
-​
-        <div class="collapse navbar-collapse" id="navbarTogglerHabiba">
-            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="gallery.html">Gallery</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="me-and-my-music.html">Me & My Music</a>
-                </li>
-            </ul>
-        </div>
-​
-        <!-- help making my exsisting form modal https://www.w3schools.com/howto/howto_css_signup_form.asp-->
-        <!--        <button onclick="document.getElementById('sign-up-modal').style.display='block'">Sign Up</button>-->
-        <button type="button" class="btn btn-light" id="nav-sign-btn"
-                onclick="document.getElementById('sign-up-modal').style.display='block'">Sign Up
-        </button>
-    </nav>
-</header>
-​
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerHabiba"
+                    aria-controls="navbarTogglerHabiba" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <a class="navbar-left mr-auto" href="index.html"> <img id="logo" src="assets/images/logo.jpg" alt="Habiba logo"> </a>
+            <div class="collapse navbar-collapse" id="navbarTogglerHabiba">
+                <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="gallery.html">Gallery</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="me-and-my-music.html">Me & My Music</a>
+                    </li>
+                </ul>
+            </div>  
+            <!-- help making my exsisting form modal https://www.w3schools.com/howto/howto_css_signup_form.asp-->
+            <button type="button" class="btn btn-light" id="nav-sign-btn" onclick="document.getElementById('sign-up-modal').style.display='block'">Sign Up</button>
+        </nav>
+    </header>
 <section class="signup">
     <div id="sign-up-modal" class="modal">
-            <span onclick="document.getElementById('sign-up-modal').style.display='none'" class="close"
-                  title="Close Modal">X</span>
+            <span onclick="document.getElementById('sign-up-modal').style.display='none'" class="close" title="Close Modal">X</span>
         <form class="modal-content" action="#">
             <div class="container">
                 <h2>Sign Up</h2>
                 <form>
                     <div class="form-group">
-                        <label for="exampleInputEmail1">Name</label>
+                        <label for="name">Name</label>
                         <input type="text" class="form-control" id="name" aria-describedby="name" required>
-                        <small id="spam-info" class="form-text text-muted">We'll never share your email with anyone
-                            else.</small>
                     </div>
                     <div class="form-group">
-                        <label for="exampleInputEmail1">Email address</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                               required>
-                        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
-                            else.</small>
+                        <label for="InputEmail">Email address</label>
+                        <input type="email" class="form-control" id="email" aria-describedby="email" required>
+                        <small id="spam-info" class="form-text text-muted">We'll never share your email with anyone else.</small>
                     </div>
                     <button type="submit" class="btn btn-light btn-lg">Sign Up to the Fan Club</button>
                 </form>
@@ -69,7 +55,6 @@
         </form>
     </div>
 </section>
-​
 <section>
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
@@ -78,17 +63,13 @@
         </div>
     </div>
 </section>
-​
 <section>
     <div class="container-fluid">
         <div class="iframe-container">
-            <iframe src="https://www.youtube.com/embed/P-A5gbBqvrA?color=white&mute=1" width="560" height="315"
-                    frameborder="0"></iframe>
+            <iframe src="https://www.youtube.com/embed/P-A5gbBqvrA?color=white&mute=1" width="560" height="315" frameborder="0"></iframe>
         </div>
     </div>
 </section>
-​
-​
 <footer class="container-fluid footer-section">
     <div id="footer" class="row">
         <div class="col-12" id="email-contact">
