--- a/gallery.html
+++ b/gallery.html
@@ -18,14 +18,14 @@
             <a class="navbar-left mr-auto" href="index.html"> <img id="logo" src="assets/images/logo.jpg" alt="Habiba logo"> </a>
             <div class="collapse navbar-collapse" id="navbarTogglerHabiba">
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="gallery.html">Gallery <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="gallery.html">Gallery</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="me-and-my-music.html">Me & My Music</a>
+                        <a class="nav-link" href="meandmusic.html">Me & My Music</a>
                     </li>
                 </ul>
             </div>
