--- a/meandmusic.html
+++ b/meandmusic.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"/>
     <link rel="stylesheet" href="assets/css/style.css">
     <title>BGB Music</title>
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light">
+         <nav class="navbar navbar-expand-lg navbar-light">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerHabiba"
                     aria-controls="navbarTogglerHabiba" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -18,20 +18,20 @@
             <a class="navbar-left mr-auto" href="index.html"> <img id="logo" src="assets/images/logo.jpg" alt="Habiba logo"> </a>
             <div class="collapse navbar-collapse" id="navbarTogglerHabiba">
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="gallery.html">Gallery</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="meandmusic.html">Me & My Music</a>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="meandmusic.html">Me & My Music <span class="sr-only">(current)</span></a>
                     </li>
                 </ul>
-            </div>  
+            </div>
             <!-- help making my exsisting form modal https://www.w3schools.com/howto/howto_css_signup_form.asp-->
             <button type="button" class="btn btn-light" id="nav-sign-btn" onclick="document.getElementById('sign-up-modal').style.display='block'">Sign Up</button>
-        </nav>
+        </nav> 
     </header>
 <section class="signup">
     <div id="sign-up-modal" class="modal">
@@ -63,12 +63,42 @@
         </div>
     </div>
 </section>
-<section>
-    <div class="container-fluid">
-        <div class="iframe-container">
-            <iframe src="https://www.youtube.com/embed/P-A5gbBqvrA?color=white&mute=1" width="560" height="315" frameborder="0"></iframe>
-        </div>
-    </div>
+<!-- Bio  ------------------------------------------------------->
+    <div class="container">
+            <div class="row">
+                <div class="col bio">
+                    <h2 class="title">The beginning of my journey</h2>
+                    <p>Born and raised in East London, some of my earliest memories of music was listening to Motown records in my uncles flat in Lewisham or singing to Mary Mary on a Sunday as my mother drove us to South London for Church.</p>
+                    <p>The people who raised me heavily influenced and shaped my musical education. I grew up enjoying the music of The Supremes, The Temptations, Anita Baker, Sadé, Luther Vandross, Stevie Wonder and the Fugees to name a few. I would say my own writing is reflective of the raw and emotive style of writing in that time.</p>
+                    <p>I have so many influences that span cross time and genre. Some of my constants are the likes of Etta James, Beyoncé, Ms. Lauryn Hill, H.E.R and Jhene Aiko. Their raw talent and honesty helped stimulate my creativity when writing my debut single <em>HER</em>.</p>
+                    <p>I would describe my music as heartfelt and honest. using soulful tones to share what can only be described as the beautiful pains of love and life that I’ve either experienced first-hand or observed.</p>
+                    <p>I love making music and I hope you love hearing it.
+                    <br>
+                    Habiba x
+                    </p>
+                </div>
+            </div>   
+        </div>  
+    
+    <section>
+        <div class="container">
+            <h4>Music Monday's</h4>
+            <div class="row">
+                <div class="col-sm">
+                Music monday Vid 1
+                </div>
+                <div class="col-sm">
+                Music monday Vid 2
+                </div>
+                <div class="col-sm">
+                Music monday Vid 3
+                </div>
+                <div class="col-sm">
+                Music monday Vid 4
+                </div>
+            </div>
+        </div>   
+        
 </section>
 <footer class="container-fluid footer-section">
     <div id="footer" class="row">
@@ -76,7 +106,6 @@
             <a target="_blank" href="mailto:Contact@habibamusic.co.uk">
                 <i class="fa fa-envelope" aria-hidden="true"></i>
                 Email & Connect with me
-                <span class="sr-only">Email</span>
             </a>
         </div>
     </div>
@@ -117,6 +146,5 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
         integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
         crossorigin="anonymous"></script>
-​
 </body>
 </html>
