--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     aria-controls="navbarTogglerHabiba" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-left mr-auto" href="index.html"> <img id="logo" src="assets/images/logo.jpg" alt="Habiba logo"> </a>
+            <a class="navbar-left m-auto" href="index.html"> <img id="logo" src="assets/images/logo.jpg" alt="Habiba logo"> </a>
             <div class="collapse navbar-collapse" id="navbarTogglerHabiba">
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                     <li class="nav-item active">
@@ -70,6 +70,12 @@
         </div>
     </div>
 </section>
+<section id="upcoming-events">
+    <div class="container-fluid">
+                <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+        <div class="elfsight-app-a7f28861-05e0-4a4e-a4f8-7b87f964aaa3"></div>
+    </div>
+</section>
 <footer class="container-fluid footer-section">
     <div id="footer" class="row">
         <div class="col-12" id="email-contact">
@@ -117,6 +123,5 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
         integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
         crossorigin="anonymous"></script>
-​
 </body>
 </html>
