--- a/index.html
+++ b/index.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
     <link rel="stylesheet" href="assets/css/style.css">
-     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <title>BGB Music</title>
 </head>
+
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerHabiba"
-                    aria-controls="navbarTogglerHabiba" aria-expanded="false" aria-label="Toggle navigation">
+                aria-controls="navbarTogglerHabiba" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-left m-auto" href="index.html"> <img id="logo" src="assets/images/logo.jpg" alt="Habiba logo"> </a>
+            <a class="navbar-left m-auto" href="index.html"> <img id="logo" src="assets/images/logo.jpg"
+                    alt="Habiba logo"> </a>
             <div class="collapse navbar-collapse" id="navbarTogglerHabiba">
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                     <li class="nav-item active">
@@ -30,111 +33,117 @@
                         <a class="nav-link" href="meandmusic.html">Me & My Music</a>
                     </li>
                 </ul>
-            </div>  
+            </div>
             <!-- help making my exsisting form modal https://www.w3schools.com/howto/howto_css_signup_form.asp-->
-            <button type="button" class="btn btn-light" id="nav-sign-btn" onclick="document.getElementById('sign-up-modal').style.display='block'">Sign Up</button>
+            <button type="button" class="btn btn-light" id="nav-sign-btn"
+                onclick="document.getElementById('sign-up-modal').style.display='block'">Sign Up</button>
         </nav>
     </header>
-<section class="signup">
-    <div id="sign-up-modal" class="modal">
-            <span onclick="document.getElementById('sign-up-modal').style.display='none'" class="close" title="Close Modal">X</span>
-        <form class="modal-content" action="#">
+    <section class="signup">
+        <div id="sign-up-modal" class="modal">
+            <span onclick="document.getElementById('sign-up-modal').style.display='none'" class="close"
+                title="Close Modal">X</span>
+            <form class="modal-content" action="#">
+                <div class="container">
+                    <h2>Sign Up</h2>
+                    <form>
+                        <div class="form-group">
+                            <label for="name">Name</label>
+                            <input type="text" class="form-control" id="name" aria-describedby="name" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="InputEmail">Email address</label>
+                            <input type="email" class="form-control" id="email" aria-describedby="email" required>
+                            <small id="spam-info" class="form-text text-muted">We'll never share your email with anyone
+                                else.</small>
+                        </div>
+                        <button type="submit" class="btn btn-light btn-lg">Sign Up to the Fan Club</button>
+                    </form>
+                </div>
+            </form>
+        </div>
+    </section>
+    <section>
+        <div class="jumbotron jumbotron-fluid">
             <div class="container">
-                <h2>Sign Up</h2>
-                <form>
-                    <div class="form-group">
-                        <label for="name">Name</label>
-                        <input type="text" class="form-control" id="name" aria-describedby="name" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="InputEmail">Email address</label>
-                        <input type="email" class="form-control" id="email" aria-describedby="email" required>
-                        <small id="spam-info" class="form-text text-muted">We'll never share your email with anyone else.</small>
-                    </div>
-                    <button type="submit" class="btn btn-light btn-lg">Sign Up to the Fan Club</button>
-                </form>
+                <p class="text-center lead" id="outnow"> New Song Alert! <br> Gin & Ginger Ale</p>
+                <p class="text-center" id="listen"><a href="https://linktr.ee/habiba_bgb"> Listen Here Now</a></p>
             </div>
-        </form>
-    </div>
-</section>
-<section>
-    <div class="jumbotron jumbotron-fluid">
-        <div class="container">
-            <p class="text-center lead" id="outnow"> New Song Alert! <br> Gin & Ginger Ale, Out Now</p>
-            <p class="text-center" id="listen"><a href="https://linktr.ee/habiba_bgb"> Listen Here</a></p>
         </div>
-    </div>
-</section>
-<section>
-    <div class="row">
-        <div class="col-md-6 col-lg-6">
-            <div class="container-fluid">
-                <div class="iframe-container">
-                    <iframe src="https://www.youtube.com/embed/XG75SAwo7UA?color=white&mute=1" width="560" height="315" frameborder="0"></iframe>
+    </section>
+    <section>
+        <div class="row">
+            <div class="col-md-6 col-lg-6">
+                <div class="container-fluid">
+                    <div class="iframe-container">
+                        <iframe src="https://www.youtube.com/embed/XG75SAwo7UA?color=white&mute=1" width="560"
+                            height="315" frameborder="0"></iframe>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-6">
+                <div class="container-fluid">
+                    <div class="iframe-container">
+                        <iframe src="https://www.youtube.com/embed/P-A5gbBqvrA?color=white&mute=1" width="560"
+                            height="315" frameborder="0"></iframe>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="col-md-6 col-lg-6">
-            <div class="container-fluid">
-                <div class="iframe-container">
-                    <iframe src="https://www.youtube.com/embed/P-A5gbBqvrA?color=white&mute=1" width="560" height="315" frameborder="0"></iframe>
-                </div>
+    </section>
+    <section id="upcoming-events">
+        <div class="container-fluid">
+            <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+            <div class="elfsight-app-a7f28861-05e0-4a4e-a4f8-7b87f964aaa3"></div>
+        </div>
+    </section>
+    <footer class="container-fluid footer-section">
+        <div id="footer" class="row">
+            <div class="col-12" id="email-contact">
+                <a target="_blank" href="mailto:Contact@habibamusic.co.uk">
+                    <i class="fa fa-envelope" aria-hidden="true"></i>
+                    Email & Connect with me
+                    <span class="sr-only">Email</span>
+                </a>
             </div>
         </div>
-    </div>
-</section>
-<section id="upcoming-events">
-    <div class="container-fluid">
-                <script src="https://apps.elfsight.com/p/platform.js" defer></script>
-        <div class="elfsight-app-a7f28861-05e0-4a4e-a4f8-7b87f964aaa3"></div>
-    </div>
-</section>
-<footer class="container-fluid footer-section">
-    <div id="footer" class="row">
-        <div class="col-12" id="email-contact">
-            <a target="_blank" href="mailto:Contact@habibamusic.co.uk">
-                <i class="fa fa-envelope" aria-hidden="true"></i>
-                Email & Connect with me
-                <span class="sr-only">Email</span>
-            </a>
+        <hr>
+        <div class="row">
+            <div class="col-3 social-media">
+                <a target="_blank" href="https://www.facebook.com/HabibaBGB/">
+                    <i class="fa fa-facebook social-media" aria-hidden="true"></i>
+                    <span class="sr-only">Facebook</span>
+                </a>
+            </div>
+            <div class="col-3 social-media">
+                <a target="_blank" href="https://twitter.com/BadGyalBiba">
+                    <i class="fa fa-twitter social-media" aria-hidden="true"></i>
+                    <span class="sr-only">Twitter</span>
+                </a>
+            </div>
+            <div class="col-3 social-media">
+                <a target="_blank" href="https://www.instagram.com/habiba_bgb/">
+                    <i class="fa fa-instagram social-media" aria-hidden="true"></i>
+                    <span class="sr-only">Instagram</span>
+                </a>
+            </div>
+            <div class="col-3 social-media">
+                <a target="_blank" href="https://www.youtube.com/c/HabibaAdamu/videos">
+                    <i class="fa fa-youtube social-media" aria-hidden="true"></i>
+                    <span class="sr-only">YouTube</span>
+                </a>
+            </div>
         </div>
-    </div>
-    <hr>
-    <div class="row">
-        <div class="col-3 social-media">
-            <a target="_blank" href="https://www.facebook.com/HabibaBGB/">
-                <i class="fa fa-facebook social-media" aria-hidden="true"></i>
-                <span class="sr-only">Facebook</span>
-            </a>
-        </div>
-        <div class="col-3 social-media">
-            <a target="_blank" href="https://twitter.com/BadGyalBiba">
-                <i class="fa fa-twitter social-media" aria-hidden="true"></i>
-                <span class="sr-only">Twitter</span>
-            </a>
-        </div>
-        <div class="col-3 social-media">
-            <a target="_blank" href="https://www.instagram.com/habiba_bgb/">
-                <i class="fa fa-instagram social-media" aria-hidden="true"></i>
-                <span class="sr-only">Instagram</span>
-            </a>
-        </div>
-        <div class="col-3 social-media">
-            <a target="_blank" href="https://www.youtube.com/c/HabibaAdamu/videos">
-                <i class="fa fa-youtube social-media" aria-hidden="true"></i>
-                <span class="sr-only">YouTube</span>
-            </a>
-        </div>
-    </div>
-</footer>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    </footer>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
         integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
         crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
         integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
