changes made to the meandmusic page as well as the addition of the Readme to be cleaned up

--- a/meandmusic.html
+++ b/meandmusic.html
@@ -47,19 +47,17 @@
             <form class="modal-content" action="#">
                 <div class="container">
                     <h2>Sign Up</h2>
-                    <form>
-                        <div class="form-group">
-                            <label for="name">Name</label>
-                            <input type="text" class="form-control" id="name" aria-describedby="name" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="InputEmail">Email address</label>
-                            <input type="email" class="form-control" id="email" aria-describedby="email" required>
-                            <small id="spam-info" class="form-text text-muted">We'll never share your email with anyone
-                                else.</small>
-                        </div>
-                        <button type="submit" class="btn btn-light btn-lg">Sign Up to the Fan Club</button>
-                    </form>
+                    <div class="form-group">
+                        <label for="name">Name</label>
+                        <input type="text" class="form-control" id="name" aria-describedby="name" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email address</label>
+                        <input type="email" class="form-control" id="email" aria-describedby="email" required>
+                        <small id="spam-info" class="form-text text-muted">We'll never share your email with anyone
+                            else.</small>
+                    </div>
+                    <button type="submit" class="btn btn-light btn-lg">Sign Up to the Fan Club</button>
                 </div>
             </form>
         </div>
@@ -91,36 +89,41 @@
                     observed.</p>
                 <p>I love making music and I hope you love hearing it. My Music Monday's are way for me to blow off some
                     steam and challenge myself while having a bit of fun. Check out the videos below!
-                    <br>
+                    <br><br>
                     Habiba x
                 </p>
             </div>
         </div>
     </div>
     <section>
-        <div class="row">
-            <div class="col-sm">
-                <div class="container-fluid iframe-container music-monday">
-                    <iframe src="https://www.youtube.com/embed/b7xw-4wb5ro?color=white&mute=1" width="560" height="315"
-                        frameborder="0"></iframe>
+        <div class="container">
+            <h4>Music Monday's</h4>
+            <div class="row monday-music">
+                <div class="col-md-6 col-lg-6">
+                    <div class="container-fluid iframe-container">
+                        <iframe src="https://www.youtube.com/embed/b7xw-4wb5ro?color=white&mute=1" width="560"
+                            height="315"></iframe>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-6">
+                    <div class="container-fluid iframe-container">
+                        <iframe src="https://www.youtube.com/embed/9iAk9flfCzc?color=white&mute=1" width="560"
+                            height="315"></iframe>
+                    </div>
                 </div>
             </div>
-            <div class="col-sm">
-                <div class="container-fluid iframe-container music-monday">
-                    <iframe src="https://www.youtube.com/embed/9iAk9flfCzc?color=white&mute=1" width="560" height="315"
-                        frameborder="0"></iframe>
+            <div class="row monday-music">
+                <div class="d-none d-md-block col-md-6 col-lg-6">
+                    <div class="container-fluid iframe-container">
+                        <iframe src="https://www.youtube.com/embed/SBHT47JObKM?color=white&mute=1" width="560"
+                            height="315"></iframe>
+                    </div>
                 </div>
-            </div>
-            <div class="col-sm">
-                <div class="container-fluid iframe-container music-monday">
-                    <iframe src="https://www.youtube.com/embed/SBHT47JObKM?color=white&mute=1" width="560" height="315"
-                        frameborder="0"></iframe>
-                </div>
-            </div>
-            <div class="col-sm">
-                <div class="container-fluid iframe-container music-monday">
-                    <iframe src="https://www.youtube.com/embed/mCZDfyEcHfc?color=white&mute=1" width="560" height="315"
-                        frameborder="0"></iframe>
+                <div class="d-none d-md-block col-md-6 col-lg-6">
+                    <div class="container-fluid iframe-container">
+                        <iframe src="https://www.youtube.com/embed/mCZDfyEcHfc?color=white&mute=1" width="560"
+                            height="315"></iframe>
+                    </div>
                 </div>
             </div>
         </div>
