--- a/gallery.html
+++ b/gallery.html
@@ -46,19 +46,17 @@
             <form class="modal-content" action="#">
                 <div class="container">
                     <h2>Sign Up</h2>
-                    <form>
-                        <div class="form-group">
-                            <label for="name">Name</label>
-                            <input type="text" class="form-control" id="name" aria-describedby="name" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="InputEmail">Email address</label>
-                            <input type="email" class="form-control" id="email" aria-describedby="email" required>
-                            <small id="spam-info" class="form-text text-muted">We'll never share your email with anyone
-                                else.</small>
-                        </div>
-                        <button type="submit" class="btn btn-light btn-lg">Sign Up to the Fan Club</button>
-                    </form>
+                    <div class="form-group">
+                        <label for="name">Name</label>
+                        <input type="text" class="form-control" id="name" aria-describedby="name" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email address</label>
+                        <input type="email" class="form-control" id="email" aria-describedby="email" required>
+                        <small id="spam-info" class="form-text text-muted">We'll never share your email with anyone
+                            else.</small>
+                    </div>
+                    <button type="submit" class="btn btn-light btn-lg">Sign Up to the Fan Club</button>
                 </div>
             </form>
         </div>
@@ -176,5 +174,4 @@
         integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
         crossorigin="anonymous"></script>
 </body>
-
 </html>
