--- a/index.html
+++ b/index.html
@@ -46,19 +46,17 @@
             <form class="modal-content" action="#">
                 <div class="container">
                     <h2>Sign Up</h2>
-                    <form>
-                        <div class="form-group">
-                            <label for="name">Name</label>
-                            <input type="text" class="form-control" id="name" aria-describedby="name" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="InputEmail">Email address</label>
-                            <input type="email" class="form-control" id="email" aria-describedby="email" required>
-                            <small id="spam-info" class="form-text text-muted">We'll never share your email with anyone
-                                else.</small>
-                        </div>
-                        <button type="submit" class="btn btn-light btn-lg">Sign Up to the Fan Club</button>
-                    </form>
+                    <div class="form-group">
+                        <label for="name">Name</label>
+                        <input type="text" class="form-control" id="name" aria-describedby="name" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email address</label>
+                        <input type="email" class="form-control" id="email" aria-describedby="email" required>
+                        <small id="spam-info" class="form-text text-muted">We'll never share your email with anyone
+                            else.</small>
+                    </div>
+                    <button type="submit" class="btn btn-light btn-lg">Sign Up to the Fan Club</button>
                 </div>
             </form>
         </div>
@@ -77,7 +75,7 @@
                 <div class="container-fluid">
                     <div class="iframe-container">
                         <iframe src="https://www.youtube.com/embed/XG75SAwo7UA?color=white&mute=1" width="560"
-                            height="315" frameborder="0"></iframe>
+                            height="315"></iframe>
                     </div>
                 </div>
             </div>
@@ -85,7 +83,7 @@
                 <div class="container-fluid">
                     <div class="iframe-container">
                         <iframe src="https://www.youtube.com/embed/P-A5gbBqvrA?color=white&mute=1" width="560"
-                            height="315" frameborder="0"></iframe>
+                            height="315"></iframe>
                     </div>
                 </div>
             </div>
@@ -93,7 +91,6 @@
     </section>
     <section id="upcoming-events">
         <div class="container-fluid">
-            <script src="https://apps.elfsight.com/p/platform.js" defer></script>
             <div class="elfsight-app-a7f28861-05e0-4a4e-a4f8-7b87f964aaa3"></div>
         </div>
     </section>
@@ -135,6 +132,7 @@
             </div>
         </div>
     </footer>
+    <script src="https://apps.elfsight.com/p/platform.js" defer></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
@@ -145,5 +143,4 @@
         integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
         crossorigin="anonymous"></script>
 </body>
-
 </html>
